fundamentals-pt1: Script File Example

--- a/fundamentals-pt1/index.html
+++ b/fundamentals-pt1/index.html
@@ -22,17 +22,10 @@
         color: white;
       }
     </style>
-
-    <script>
-      // assigns variable
-      let js = 'amazing';
-      // alert creates a text box containing a message
-      if (js === 'amazing') alert('JavaScript is FUN!');
-      // returns data to browser console
-      console.log(40+8+23-10);
-    </script>
   </head>
   <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
+
+    <script src="script.js"></script>
   </body>
 </html>
